--- a/UI_init/MainWin.ui
+++ b/UI_init/MainWin.ui
@@ -63,7 +63,7 @@
      <x>0</x>
      <y>0</y>
      <width>1376</width>
-     <height>23</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -118,10 +118,17 @@
      <addaction name="action_ImportSrc"/>
      <addaction name="action_ImportRcv"/>
     </widget>
+    <widget class="QMenu" name="menuView">
+     <property name="title">
+      <string>View</string>
+     </property>
+     <addaction name="action_ViewSurvey"/>
+     <addaction name="action_View_added_well_paths"/>
+    </widget>
     <addaction name="action_NewSurvey"/>
     <addaction name="menu_ImportConfig"/>
     <addaction name="separator"/>
-    <addaction name="action_ViewSurvey"/>
+    <addaction name="menuView"/>
    </widget>
    <widget class="QMenu" name="menu_ModelGen">
     <property name="title">
@@ -251,11 +258,6 @@
     <string>Receiver config</string>
    </property>
   </action>
-  <action name="action_ViewSurvey">
-   <property name="text">
-    <string>View</string>
-   </property>
-  </action>
   <action name="action_SlabGen">
    <property name="text">
     <string>Slabs</string>
@@ -287,6 +289,16 @@
   <action name="action_ImportWellPath">
    <property name="text">
     <string>Import</string>
+   </property>
+  </action>
+  <action name="action_ViewSurvey">
+   <property name="text">
+    <string>Survey</string>
+   </property>
+  </action>
+  <action name="action_View_added_well_paths">
+   <property name="text">
+    <string>Add well paths</string>
    </property>
   </action>
  </widget>
