--- a/UI_init/tabBkg.ui
+++ b/UI_init/tabBkg.ui
@@ -88,18 +88,15 @@
           <attribute name="horizontalHeaderMinimumSectionSize">
            <number>80</number>
           </attribute>
-          <attribute name="horizontalHeaderDefaultSectionSize">
-           <number>130</number>
-          </attribute>
           <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
-           <bool>true</bool>
+           <bool>false</bool>
           </attribute>
           <attribute name="horizontalHeaderStretchLastSection">
            <bool>true</bool>
           </attribute>
           <column>
            <property name="text">
-            <string>Property Value</string>
+            <string>Property Value (above surf)</string>
            </property>
            <property name="font">
             <font>
